--- a/LaughderApp/app/src/main/AndroidManifest.xml
+++ b/LaughderApp/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/aapje"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -20,6 +20,14 @@
         </activity>
         <activity
             android:name=".BrowseActivity"
+            android:label="@string/username" >
+        </activity>
+        <activity
+            android:name=".MatchActivity"
+            android:label="@string/username" >
+        </activity>
+        <activity
+            android:name=".EditProfileActivity"
             android:label="@string/username" >
         </activity>
         <meta-data
