--- a/LaughderApp/app/src/main/AndroidManifest.xml
+++ b/LaughderApp/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".ParseApplication"
         android:allowBackup="true"
         android:icon="@drawable/aapje"
         android:label="@string/app_name"
@@ -28,6 +29,10 @@
         </activity>
         <activity
             android:name=".EditProfileActivity"
+            android:label="@string/username" >
+        </activity>
+        <activity
+            android:name=".RegisterActivity"
             android:label="@string/username" >
         </activity>
         <meta-data
