--- a/LaughderApp/app/src/main/AndroidManifest.xml
+++ b/LaughderApp/app/src/main/AndroidManifest.xml
@@ -41,6 +41,11 @@
         <meta-data
             android:name="com.parse.CLIENT_KEY"
             android:value="2H7K0Hq8FsJtfsf6TwVwVCIkB4UjFJpZ93FGM7Of" />
+        <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+             App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
     </application>
 
