--- a/LaughderApp/app/src/main/AndroidManifest.xml
+++ b/LaughderApp/app/src/main/AndroidManifest.xml
@@ -22,8 +22,7 @@
         </activity>
         <activity
             android:name=".BrowseActivity"
-            android:label="@string/username"
-            android:hardwareAccelerated="true" >
+            android:label="@string/username" >
         </activity>
         <activity
             android:name=".MatchActivity"
@@ -48,9 +47,6 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-        <meta-data
-            android:name="com.my.app.myYouTubeID"
-            android:value="AIzaSyBlDmYu3f59Skb1oKZUX7O60PrCTHH2Goo" />
 
     </application>
 
